# notes-rs

./: .gitignore  Cargo.toml  README.md  build.sh  create_files.sh  note.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: clippy.yml  format.yml  test.yml  upload_artifacts.yml
aaa_test/folder1/: zzt.txt
aaa_test/folder1/folder1.1/: hello.h  janvier.c  mais_nan.h
questions/: subscription_custom.txt
src/: actions.rs  app.rs  button.rs  context_menu.rs  dirs_tree.rs  explorer.rs  file_system.rs  files_explorer.rs  fs.rs  helper.rs  icons.rs  main.rs  notify.rs  onglets.rs  tab.rs  theme.rs  tree.rs  watcher.rs
src/explorer/: binary_search.rs  file_struct.rs  mod.rs  notify.rs
src/helpers/: fs.rs  helper.rs  icons.rs  mod.rs
src/tabs/: tab.rs
src/top_bar/: actions.rs
src/widgets/: tree.rs
