[package]
name = "notes_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9"
notify = "6.0.0"
futures = "0.3.28"
iced_aw = { version = "0.5.2", features = [
    "menu",
    "quad",
    "icon_text"
] }